# svb

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/workflows/: bench.yml  ci.yml  docs.yml
benches/: decode.rs
docs/: book.toml
docs/src/: SUMMARY.md  encoding.md  exzd.md  getting-started.md  index.md  no-std.md  performance.md  simd.md  svbzd.md  transforms.md  vbz.md  wire-compatibility.md
docs/src/codecs/: index.md  svb16.md  u32-classic.md  u32-variant0124.md  u64-coder1234.md  u64-coder1248.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: decode_exzd.rs  decode_svbzd.rs  decode_vbz.rs  exzd_roundtrip.rs  roundtrip.rs  svb16_decode.rs  svbzd_roundtrip.rs  u32_classic_decode.rs  u32_roundtrip.rs  u32_variant0124_decode.rs  u64_coder1234_decode.rs  u64_coder1248_decode.rs  u64_roundtrip.rs
scripts/: bench_summary.py
src/: coder.rs  delta.rs  error.rs  exzd_fused.rs  lib.rs  patched.rs  quantize.rs  svbzd_fused.rs  vbz_fused.rs  zigzag.rs
src/u16/: avx2.rs  mod.rs  neon.rs  scalar.rs  shuffle.rs  sse2.rs
src/u32/: avx2.rs  mod.rs  neon.rs  scalar.rs  shuffle.rs  sse2.rs
src/u64/: avx2.rs  mod.rs  neon.rs  scalar.rs  shuffle.rs  sse2.rs
tests/: compat.rs  cross_crate.rs  parity.rs  roundtrip.rs
tests/vectors/: bench_00_101988.i16  bench_00_101988.svb16  exzd_big_10.enc  exzd_big_10.raw  exzd_exp_10.enc  exzd_exp_10.raw  exzd_huge_35.enc  exzd_huge_35.raw  exzd_one_1.enc  exzd_pod5_00_02885.enc  exzd_pod5_00_02885.raw  exzd_pod5_01_02915.enc  exzd_pod5_01_02915.raw  exzd_pod5_02_02949.enc  exzd_pod5_bench_101988.enc  manifest.json  parity_00_02885.svb16  parity_01_02915.svb16  parity_02_02949.i16  parity_02_02949.svb16  u32_classic_256.enc  u32_classic_256.raw  u32_variant0124_256.enc  u32_variant0124_256.raw  u64_coder1234_256.raw  u64_coder1248_256.enc  u64_coder1248_256.raw
