[package]
name = "svb"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"

[features]
default = ["std"]
std = ["alloc", "thiserror/std"]
alloc = []
simd-avx2 = []
simd-ssse3 = []
simd-neon = []
simd-auto = [] # On x86-64 requires `std` for runtime CPU detection; without `std` falls back to scalar

[dependencies]
thiserror = { version = "2", default-features = false }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1"
streamvbyte64 = "0.2"

[[bench]]
name = "decode"
harness = false
