[package]
name = "svb"
version = "0.2.0"
edition = "2024"
rust-version = "1.87"
description = "Pure-Rust StreamVByte: integer compression for u16/u32/u64 with SIMD decode (AVX2, SSSE3, NEON)"
license = "MIT"
repository = "https://github.com/Psy-Fer/svb"
homepage = "https://github.com/Psy-Fer/svb"
documentation = "https://docs.rs/svb"
keywords = ["compression", "streamvbyte", "simd", "integer", "vbz"]
categories = ["compression", "encoding", "no-std"]
readme = "README.md"
exclude = ["tests/vectors/*.bin", "fuzz/", "svb_ref_doc.md", "TODO.md", "docs/"]

[package.metadata.docs.rs]
features = ["simd-auto"]
all-features = false

[features]
default = ["std"]
std = ["alloc", "thiserror/std"]
alloc = []
simd-avx2 = []
simd-ssse3 = []
simd-neon = []
simd-auto = [] # On x86-64 requires `std` for runtime CPU detection; without `std` falls back to scalar

[dependencies]
thiserror = { version = "2", default-features = false }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1"
streamvbyte64 = "0.2"

[[bench]]
name = "decode"
harness = false
