[package]
name = "svb-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.svb]
path = ".."
features = ["simd-auto"]

[[bin]]
name = "decode_vbz"
path = "fuzz_targets/decode_vbz.rs"
test = false
doc = false
bench = false

[[bin]]
name = "svb16_decode"
path = "fuzz_targets/svb16_decode.rs"
test = false
doc = false
bench = false

[[bin]]
name = "roundtrip"
path = "fuzz_targets/roundtrip.rs"
test = false
doc = false
bench = false
