[package]
name = "svb-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.svb]
path = ".."
features = ["simd-auto"]

[[bin]]
name = "decode_vbz"
path = "fuzz_targets/decode_vbz.rs"
test = false
doc = false
bench = false

[[bin]]
name = "svb16_decode"
path = "fuzz_targets/svb16_decode.rs"
test = false
doc = false
bench = false

[[bin]]
name = "roundtrip"
path = "fuzz_targets/roundtrip.rs"
test = false
doc = false
bench = false

[[bin]]
name = "u32_classic_decode"
path = "fuzz_targets/u32_classic_decode.rs"
test = false
doc = false
bench = false

[[bin]]
name = "u32_variant0124_decode"
path = "fuzz_targets/u32_variant0124_decode.rs"
test = false
doc = false
bench = false

[[bin]]
name = "u64_coder1234_decode"
path = "fuzz_targets/u64_coder1234_decode.rs"
test = false
doc = false
bench = false

[[bin]]
name = "u64_coder1248_decode"
path = "fuzz_targets/u64_coder1248_decode.rs"
test = false
doc = false
bench = false

[[bin]]
name = "u32_roundtrip"
path = "fuzz_targets/u32_roundtrip.rs"
test = false
doc = false
bench = false

[[bin]]
name = "u64_roundtrip"
path = "fuzz_targets/u64_roundtrip.rs"
test = false
doc = false
bench = false

[[bin]]
name = "decode_svbzd"
path = "fuzz_targets/decode_svbzd.rs"
test = false
doc = false
bench = false

[[bin]]
name = "svbzd_roundtrip"
path = "fuzz_targets/svbzd_roundtrip.rs"
test = false
doc = false
bench = false

[[bin]]
name = "decode_exzd"
path = "fuzz_targets/decode_exzd.rs"
test = false
doc = false
bench = false

[[bin]]
name = "exzd_roundtrip"
path = "fuzz_targets/exzd_roundtrip.rs"
test = false
doc = false
bench = false
